# nybbler

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Nybbler.h
lib/: Nybbler.cpp
test/: .lit_test_times.txt  add_narrow.ll  bitwise_i1.ll  bitwise_i2.ll  bitwise_i4.ll  coverage.test  edge_values.ll  lit.cfg.py  lit.site.cfg.py.in  pad_diff.ll  pad_nonbyte.ll  shift_overwidth.ll  skip_nonbyte.ll
test/diff/: add.ll  and.ll  ashr.ll  eq.ll  lshr.ll  ne.ll  or.ll  shl.ll  slt.ll  sub.ll  ult.ll  xor.ll
test/shape/: add_i1.ll  add_i2.ll  add_i4.ll  and_i1.ll  and_i2.ll  and_i4.ll  ashr_i1.ll  ashr_i2.ll  ashr_i4.ll  eq_i1.ll  eq_i2.ll  eq_i4.ll  lshr_i1.ll  lshr_i2.ll  lshr_i4.ll  ne_i1.ll  ne_i2.ll  ne_i4.ll  or_i1.ll  or_i2.ll  or_i4.ll  shl_i1.ll  shl_i2.ll  shl_i4.ll  slt_i1.ll  slt_i2.ll  slt_i4.ll  sub_i1.ll  sub_i2.ll  sub_i4.ll  ult_i1.ll  ult_i2.ll  ult_i4.ll  xor_i1.ll  xor_i2.ll  xor_i4.ll
tools/: coverage_check.py  diff_runner.py
